added Tokens checks

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI = mongodb+srv://migospay:5gi9mrI7ICAE40Jj@cluster0.rp3pump.mongodb.net/techguard
+JWT_SECRET = soundmuve
+REFRESH_TOKEN_SECRET = soundmuve
