added .env details

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 MONGODB_URI = mongodb+srv://migospay:5gi9mrI7ICAE40Jj@cluster0.rp3pump.mongodb.net/techguard
 JWT_SECRET = soundmuve
 REFRESH_TOKEN_SECRET = soundmuve
+CLOUD_NAME = ddpq1fg9s
+API_KEY = 137683632675467
+API_SECRET = IIBQ7EpXQJZnPmbRsL4sW9Pny4E
+SMTP_SERVER = mail.qstix.com.ng
+SMTP_PORT = 465
+SMTP_USER = no-reply@qstix.com.ng
+SMTP_PASS = EmekaIwuagwu87**
