--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ PAYPAL_CLIENT_ID = AY16tQxVq_etvnR9xG6NmFNjH2vO9kyBW58-trxASuVrYxZt7HDuknc_E3l_F
 PAYPAL_SECRET = EJUt6qjwDPwoJ8xW6TKUAWzotzyEXnZUs-QjC1jiwSjGxrPmLanGznoUD3P-KGuyE1aRetCORFLRAatb
 PAYPAL_OAUTH_URL = https://api-m.sandbox.paypal.com/v1/oauth2/token
 PAYPAL_PAYOUTS_URL = https://api-m.sandbox.paypal.com/v1/payments/payouts
+SPOTIFY_CLIENT_ID = db46dc3bcb774aaaa28a0152c88d0297
+SPOTIFY_CLIENT_SECRET = f260239ea16e43f0b74f57f5ecf29a7a
