--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.21.0",
@@ -28,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.9.13",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "qs": "^6.13.0"
   }
 }
